# snip721-reference-impl

./: .gitignore  Cargo.toml  Makefile  NOTICE.md  README.md
.circleci/: config.yml
.github/: Store_On-chain.yml
.github/workflows/: Basic.yml  Optimize_wasm.yml  Test_and_compile_contract.yml
examples/: schema.rs
schema/: execute_answer.json  execute_msg.json  handle_answer.json  handle_msg.json  init_msg.json  instantiate_msg.json  query_answer.json  query_msg.json
src/: contract.rs  expiration.rs  inventory.rs  lib.rs  mint_run.rs  msg.rs  receiver.rs  royalties.rs  scratchpad.rs  state.rs  token.rs  unittest.rs  unittest_handles.rs  unittest_inventory.rs  unittest_mint_run.rs  unittest_non_transferable.rs  unittest_queries.rs  unittest_royalties.rs  utils.rs  viewing_key.rs
tests/: integration.rs
