[package]
name = "snip721-reference-impl"
version = "0.1.0"
authors = ["bill wincer"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit.git", branch = "cosmwasm-v1.0", default-features = false, features = ["storage", "serialization", "utils", "permit"] }
serde-json-wasm = "0.4.1"
schemars = "0.8.11"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.7.1" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.13.0"
hex = "0.4.2"
primitive-types = { version = "0.12.0", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.6", default-features = false }

[dev-dependencies]
cosmwasm-schema = "1.1.4"
