[package]
name = "snip721-reference-impl"
version = "1.0.0"
authors = ["bill wincer"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["storage", "serialization", "utils", "permit", "viewing-key", "crypto"] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10"  }
schemars = "0.8.12"
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
bincode2 = "2.0.1"
base64 = "0.21.2"
primitive-types = { version = "0.12.2", default-features = false }


[dev-dependencies]
cosmwasm-schema = { version = "1.4.1" }
